Set style for about

--- a/themes/twenty-twenty-hugo/layouts/index.html
+++ b/themes/twenty-twenty-hugo/layouts/index.html
@@ -28,6 +28,19 @@
         </div>
       </div>
       {{ end }}
+
+    <div class="homepage-about" style="max-width: 110rem; margin-top: -7rem; margin-bottom: -5rem;">
+
+        <h3>Cloak & Pixel</h3>
+
+        <p>In 2021 a team of engineers and researchers concerned about the ethical ramifications of face detection and recognition model (FDRM) technologies came together to build on the momumentum of an earlier project, equalAIs. The Cloak & Pixel team sought to:</p>
+
+        <ul>
+            <li>Tackle the problem space of FDRMs more broadly</li>
+            <li>Develop additional interventions to advocate for responsible use of FDRMs</li>
+            <li>Define risks in the space and make them more transparent so that ordinary people could be aware of the issues and make better decisions</li>
+        </ul>
+    </div>
       <div class="wp-block-columns columns alignwide">
         {{ range (where .Site.RegularPages "Section" "blog")}}
         <div class="column">
